Avoid horizontal scroll in web-simple (#440)

--- a/templates/web-simple/web/styles.css
+++ b/templates/web-simple/web/styles.css
@@ -10,6 +10,5 @@ html, body {
 
 #output {
   padding: 20px;
-  width: 100%;
   text-align: center;
 }
